# WhatShouldIPlay

./: .editorconfig  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  LICENSE  README.md  SECURITY.md  SUPPORT.md  index.html  lighthouserc.json  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  roadmap_feedback.yml
.github/workflows/: build-desktop.yml  deploy-pages.yml  package-desktop.yml  refresh-data.yml  release-desktop-exe.yml  release-desktop-signed.yml  web-ci.yml
apps/desktop/: Cargo.toml  README.md  build.rs
apps/desktop/src/: contracts.rs  data.rs  desktop.css  engine.rs  main.rs
apps/desktop/src/ui/: mod.rs  settings.rs
contracts/: README.md  top-games.schema.json
docs/: ARCHITECTURE.md  DEVELOPMENT.md  RELEASING.md  component-system.md  desktop-ui-strategy.md  feedback-loop.md  roadmap.md
public/: manifest.webmanifest  sw.js
public/data/: top-games.json
scripts/: fetch-top-games.mjs  set-windows-signing-secrets.ps1
src/: App.tsx  main.tsx  styles.css  types.ts
src/components/: HelpTip.tsx  ManualGamesPanel.tsx  SourceAccentChips.tsx  SpinHistoryPanel.tsx  Wheel.tsx  WinnerSummaryCard.tsx
src/contracts/: topGamesContract.ts
src/hooks/: useActiveProfileSelection.ts  useAppController.ts  useAppPersistence.ts  useAppShellLayoutProps.ts  useAppState.ts  useApplyCloudSnapshot.ts  useCloudPanelData.ts  useCloudProfileActions.ts  useCloudSnapshotBuilders.ts  useCloudSyncTransport.ts  useCloudWorkspace.ts  useFeedbackCenter.ts  useGamePoolData.ts  useLibraryActions.ts  useModalFocusEffects.ts  useNavigationActions.ts  useUiDerivedData.ts  (+9 more)
(+30 files in other folders)
