[package]
name = "pick-a-game-desktop"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
dioxus = { version = "0.7", features = ["desktop"] }
dirs = "6.0"
rand = "0.9"
regex = "1.12"
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls-tls"] }
scraper = "0.24"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.48", features = ["time"] }
walkdir = "2.5"

